[gd_scene load_steps=4 format=3 uid="uid://c6c31v85g17a0"]

[ext_resource type="Script" uid="uid://c3ttsfy4eiggv" path="res://Scenes/Main/SelectUIs/trait_select_ui.gd" id="1_5r3mm"]
[ext_resource type="Theme" uid="uid://bkrlwg21fhprn" path="res://Autoloads/Resources/Themes/edit_button.tres" id="1_apvn6"]
[ext_resource type="FontFile" uid="uid://ds0qrrbdvqa6n" path="res://Autoloads/Resources/Fonts/SF Sports Night.ttf" id="2_wfc16"]

[node name="TraitSelectUI" type="Control"]
custom_minimum_size = Vector2(2800, 1625)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5r3mm")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="UpperContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="SelectWhatLabel" type="Label" parent="MainContainer/UpperContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_apvn6")
theme_override_fonts/font = ExtResource("2_wfc16")
theme_override_font_sizes/font_size = 128
text = "Select Trait"

[node name="SearchBar" type="LineEdit" parent="MainContainer/UpperContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_apvn6")
theme_override_font_sizes/font_size = 104
placeholder_text = "Search..."
alignment = 1
max_length = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
custom_minimum_size = Vector2(2800, 1339)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="TraitButtonContainer" type="GridContainer" parent="MainContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 4
